# fiducials

./: README.md
aruco_cuda/: CMakeLists.txt  README.md  package.xml
aruco_cuda/include/: aruco_cuda.hpp
aruco_cuda/include/opencv2/aruco/: charuco.hpp
aruco_cuda/src/: apriltag_quad_thresh.cpp  apriltag_quad_thresh.hpp  aruco.cpp  aruco_cuda.cpp  aruco_detect_cuda.cpp  charuco.cpp  dictionary.cpp  unionfind.hpp  zarray.hpp  zmaxheap.cpp  zmaxheap.hpp
aruco_detect/: CMakeLists.txt
aruco_detect/src/: aruco_detect.cpp
