<?xml version="1.0"?>
<package format="2">
  <name>aruco_cuda</name>
  <version>0.1.0</version>
  <description>The aruco_cuda package</description>
  <author email="max.tamussino@icould.com">Max Tamussino</author>
  <maintainer email="max.tamussino@icould.com">Max Tamussino</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

</package>
